plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.0.9.RELEASE'
  id 'org.springframework.boot' version '2.3.0.RELEASE'
  id 'org.owasp.dependencycheck' version '5.3.2.1'
  id 'com.github.ben-manes.versions' version '0.28.0'
  id 'org.sonarqube' version '2.8'
  id 'info.solidsoft.pitest' version '1.5.1'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

allprojects {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked"
}

task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  useJUnitPlatform()

  outputs.upToDateWhen { false }
}

task integrationPreTest(type: Test, description: 'Runs the pre-job integration tests.', group: 'Verification') {
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  useJUnitPlatform()
}

task integrationPostTest(type: Test, description: 'Runs the post-job integration verfications.', group: 'Verification') {
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  useJUnitPlatform()
}

task smoke(type: Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

checkstyle {
  maxWarnings = 0
  toolVersion = '8.24'
  // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
  configDir = new File(rootDir, 'config/checkstyle')
}

pmd {
  toolVersion = "6.18.0"
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

jacocoTestReport {
  executionData(test)
  reports {
    xml.enabled = true
    csv.enabled = false
    xml.destination file("${buildDir}/reports/jacoco/jacocoTestReport.xml")
    html.destination file("${buildDir}/reports/jacoco/jacocoTestReport.html")
  }
}

project.tasks['sonarqube'].dependsOn test, jacocoTestReport

def sonarExclusions = [
    '**uk/gov/hmcts/reform/mi/miextractionservice/MiExtractionServiceApplication.java',
    '**uk/gov/hmcts/reform/mi/miextractionservice/domain/**',
    '**uk/gov/hmcts/reform/mi/miextractionservice/wrapper/**'
]

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: mi-extraction-service"
    property "sonar.projectKey", "uk.gov.hmcts.reform:mi-extraction-service"
    property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/jacocoTestReport.xml"
    property "sonar.exclusions", sonarExclusions.join(", ")
  }
}

dependencyUpdates.resolutionStrategy {
  componentSelection { rules ->
    rules.all {
      def isNonStable = { String version ->
        ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea'].any { qualifier ->
          version ==~ /(?i).*[.-]\$qualifier[.\\d-+]*/
        }
      }
      if (isNonStable(candidate.version) && !isNonStable(currentVersion)) {
        selection.reject('Release candidate')
      }
    }
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
  // range of 0-10 fails the build, anything greater and it doesn't fail the build
  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
  suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyManagement {
  dependencies {
    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.65'
    // CVE-2018-10237 - Unbounded memory allocation
    dependencySet(group: 'com.google.guava', version: '29.0-jre') {
      entry 'guava'
    }
    dependency group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
    dependency group: 'com.squareup.retrofit2', name: 'adapter-rxjava', version: '2.9.0'
    // CVE-2020-9488
    dependencySet(group: 'org.apache.logging.log4j', version: '2.13.3') {
      entry 'log4j-to-slf4j'
      entry 'log4j-api'
    }
  }
}

repositories {
  mavenLocal()
  jcenter()
  mavenCentral()
  maven {
    url "https://dl.bintray.com/hmcts/hmcts-maven"
  }
}

def versions = [
  azureSpringBoot  : '2.2.0',
  dumbster         : '1.7.1',
  hmctsNotify      : '3.15.1-RELEASE',
  junit            : '5.5.0',
  miCoreLib        : '3.4.0',
  reformLogging    : '5.1.5',
  openCsv          : '5.1',
  piTest           : '1.5.0',
  piTestGradle     : '1.4.5',
  piTestSonar      : '0.5',
  springBootMail   : '2.2.2.RELEASE',
  springfoxSwagger : '2.9.2',
  testContainers   : '1.12.3',
  zip4j            : '2.3.1'
]

dependencies {

  implementation 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  implementation group: 'com.microsoft.azure', name: 'azure-spring-boot-starter', version: versions.azureSpringBoot
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: versions.springBootMail

  implementation group: 'com.opencsv', name: 'opencsv', version: versions.openCsv
  implementation group: 'net.lingala.zip4j', name: 'zip4j', version: versions.zip4j

  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
  implementation('uk.gov.hmcts.reform:properties-volume-spring-boot-starter:0.0.4') {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
  }

  implementation group: 'uk.gov.hmcts.reform.mi', name: 'mi-core-lib', version: versions.miCoreLib

  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: versions.hmctsNotify

  implementation group: 'org.pitest', name: 'pitest', version: versions.piTest
  implementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.piTestGradle
  implementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.piTestSonar

  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit

  testImplementation('org.springframework.boot:spring-boot-starter-test') {
    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
  }

  functionalTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: versions.springBootMail

  functionalTestImplementation group: 'uk.gov.hmcts.reform.mi', name: 'mi-core-lib', version: versions.miCoreLib

  functionalTestImplementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: versions.hmctsNotify

  functionalTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
  functionalTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
  functionalTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit

  functionalTestImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: versions.testContainers
  functionalTestImplementation group: 'com.opencsv', name: 'opencsv', version: versions.openCsv
  functionalTestImplementation group: 'net.lingala.zip4j', name: 'zip4j', version: versions.zip4j
  functionalTestImplementation group: 'com.github.kirviq', name: 'dumbster', version: versions.dumbster

  functionalTestImplementation('org.springframework.boot:spring-boot-starter-test') {
    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
  }

  integrationTestImplementation 'org.projectlombok:lombok'
  integrationTestAnnotationProcessor 'org.projectlombok:lombok'

  integrationTestImplementation group: 'uk.gov.hmcts.reform.mi', name: 'mi-core-lib', version: versions.miCoreLib

  integrationTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
  integrationTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
  integrationTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit

  integrationTestImplementation('org.springframework.boot:spring-boot-starter-test') {
    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
  }
}

test {
  useJUnitPlatform()
}

integrationPreTest {
  filter {
    includeTestsMatching "*PreDeployTest"
  }
}

integrationPostTest {
  filter {
    includeTestsMatching "*PostDeployTest"
  }
}

pitest {
  pitestVersion = '1.5.0'
  targetClasses = ['uk.gov.hmcts.reform.mi.miextractionservice.*']
  excludedClasses = ['uk.gov.hmcts.reform.mi.miextractionservice.MiExtractionServiceApplication*',
                     'uk.gov.hmcts.reform.mi.miextractionservice.domain.*',
                     'uk.gov.hmcts.reform.mi.miextractionservice.wrapper.*']
  testSourceSets = [sourceSets.test]
  threads = 10
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  mutationThreshold = 80
  verbose = true
  junit5PluginVersion = '0.12'
}

mainClassName = 'uk.gov.hmcts.reform.mi.miextractionservice.MiExtractionServiceApplication'

bootJar {
  archiveFileName = project.name + '.jar'

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}
